<resources>
    <string name="app_name">ANR - Common pitfalls</string>
    <string name="deadlock_button_text">Deadlock</string>
    <string name="broadcastreceiver_button_text">BroadcastReceiver</string>
    <string name="blocking_api_call_button_text">Rx blocking functions</string>
    <string name="coroutine_blocking_button_text">Coroutine blocking functions</string>
    <string name="long_operation_on_ui_thread">Long operation on main thread</string>
    <string name="workmanager_rxworker">WorkManager - RxWorker</string>
    <string name="instruction_text">Press any button followed by back button to trigger ANR</string>
</resources>